<resources>
    <string name="app_name">IntentsProj</string>
    <string name="number1">Number 1</string>
    <string name="number2">Number 2</string>
    <string name="button1">Ok</string>
    <string name="addBtn">+</string>
    <string name="substractBtn">-</string>
    <string name="multipleBtn">*</string>
    <string name="devidedBtn">/</string>
    <string name="answertxt">Your Answer</string>
</resources>
